<resources>
    <string name="app_name">Synchro</string>
    <string name="action_settings">Settings</string>
    <string name="Text">Status: -</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="gauche">Gauche</string>
    <string name="droite">Droite</string>

    <string name="List">List paired Devices</string>
    <string name="Find">Search new Devices / Cancel</string>
</resources>
